deploy/doks/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metar-iwxxm
  labels:
    app.kubernetes.io/name: metar-iwxxm
