deploy/doks/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metar-frontend
  labels:
    app.kubernetes.io/name: metar-frontend
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metar-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metar-frontend
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/empiric2/tac-to-iwxxm/frontend:main-latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
