deploy/doks/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: metar-api
  labels:
    app.kubernetes.io/name: metar-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: metar-api
  ports:
    - name: http
      port: 80
      targetPort: http
