deploy/doks/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: metar-frontend
  labels:
    app.kubernetes.io/name: metar-frontend
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: metar-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
