deploy/doks/base/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metar-frontend
  labels:
    app.kubernetes.io/name: metar-frontend
    app.kubernetes.io/component: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: app.doks.placeholder.metar-iwxxm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metar-frontend
                port:
                  name: http
